[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "godaddy"
description = "This is the GoDaddy API Python Client library"
dynamic = ["version"]
requires-python = ">=3.8"
authors = [
    { name = "Matimu Chauke", email = "matimu@chauke.org" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = []

[project.optional-dependencies]
full = []

[tool.hatch.version]
path = "godaddy/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/godaddy",
]
